user module updated